# rendering

./: .gitignore  CMakeLists.txt  Cargo.toml  readme.md  shell.nix
app/: config.hpp  draw.cpp  draw.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  rendercoord.cpp  rendercoord.hpp
src/: bound.rs  bounding.rs  lib.rs  main.cpp  main.rs  object.cpp  object.hpp  ray.cpp  render.cpp  render.hpp  render.rs  scene.cpp  scene.hpp  spectrum.rs  vector.cpp  vector.hpp  vector.rs
src/camera/: camera.rs  film.rs  mod.rs
src/camera/filter/: mod.rs
src/core/: bound.rs  bound2.rs  bound3.rs  common.hpp  hittable.rs  matrix4x4.rs  mod.rs  random.hpp  ray.hpp  ray.rs  spectrum.cpp  spectrum.hpp  spectrum.rs  transform.rs  vector.cpp  vector.hpp  vector2.rs  vector3.rs
src/material/: dielectric.rs  diffuse_light.rs  lambertian.rs  mod.rs  reflectant.rs  sky_light.rs
src/render/: coordinator.rs  mod.rs  task.rs
src/sample/: mod.rs  uniform.rs
src/sampling/: random.cpp  random.hpp  sampler.cpp  sampler.hpp
src/scene/: mod.rs  scene.rs
src/scene/shapes/: mod.rs  sphere.rs
src/trace/: mod.rs  pathtrace.rs
src/world/: container.rs  hittable.rs  instancing.rs  mod.rs  scene.rs
src/world/container/: list.rs  mod.rs  tree.rs
src/world/shapes/: box.rs  mod.rs  rectangle.rs  sphere.rs
test/: object.cpp  vector.cpp
