[package]
name = "pathtrace"
version = "0.1.0"
authors = ["Julian T <julian@jtle.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.2", features = ["v3_22", "dox"] }
gdk-pixbuf = "^0.9.0"
glib = "^0.10.0"
